--- a/dialogemploye.ui
+++ b/dialogemploye.ui
@@ -928,9 +928,9 @@ QHeaderView::section:vertical
       <widget class="QPushButton" name="pushButtonSupprimer">
        <property name="geometry">
         <rect>
-         <x>820</x>
+         <x>850</x>
          <y>450</y>
-         <width>171</width>
+         <width>141</width>
          <height>41</height>
         </rect>
        </property>
@@ -978,9 +978,9 @@ QPushButton:hover
       <widget class="QPushButton" name="pushButtonModifier">
        <property name="geometry">
         <rect>
-         <x>600</x>
+         <x>670</x>
          <y>450</y>
-         <width>171</width>
+         <width>151</width>
          <height>41</height>
         </rect>
        </property>
@@ -1200,6 +1200,52 @@ QPushButton:hover
         <string/>
        </property>
       </widget>
+      <widget class="QPushButton" name="pushButtonmail">
+       <property name="geometry">
+        <rect>
+         <x>500</x>
+         <y>450</y>
+         <width>151</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton{
+font-family: &quot;Roboto&quot;, sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #2c3e50;
+    color: #FFFFFF;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+
+}
+QPushButton:hover
+{
+
+    background: #3498db;
+}
+
+
+
+
+</string>
+       </property>
+       <property name="text">
+        <string>email</string>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
+      </widget>
       <zorder>label_10</zorder>
       <zorder>styleEdit</zorder>
       <zorder>logo</zorder>
@@ -1232,6 +1278,7 @@ QPushButton:hover
       <zorder>label_12</zorder>
       <zorder>pushButton_4</zorder>
       <zorder>label</zorder>
+      <zorder>pushButtonmail</zorder>
      </widget>
      <widget class="QWidget" name="page_2">
       <widget class="QPushButton" name="Statistiques_2">
